# legal-agent

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  REVIEW.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.beads/: bd.sock  beads.db  beads.db-shm  beads.db-wal  issues.jsonl  last-touched
.claude/: settings.local.json
.claude/commands/: legal.audit.md  legal.create-contract.md  legal.db.md  legal.export-pdf.md  legal.help.md  legal.pipeline.md  legal.preview.md  legal.research.md  legal.seed-articles.md  legal.seed-suggestions.md  specledger.webhook.md
.github/workflows/: claude.yml
api/: index.py
data/: legal.db
data/chroma/: articles.json
data/contracts/: cho_thue_dat_20260223_170000.json  cho_thue_dat_20260224_161641.json  cho_thue_dat_20260224_161702.json  lao_dong_20260206_103000.json  lao_dong_20260210_150000.json  mua_ban_dat_20260206_103000.json  mua_ban_nha_20260206_103000.json  mua_ban_nha_20260211_124335.json  mua_ban_xe_may_20260206_103000.json  preview_20260206_103500.html  preview_lao_dong_20260206.html  thue_nha_20260206_103000.json  thue_phong_20260206_103000.json
data/raw/: _debug_html.txt  sync_blds_2015_mua_ban.json  sync_blds_2015_thue_tai_san.json  sync_bllđ_2019.json  sync_bo_luat_lao_dong_2019.json  sync_luat_duong_bo_2024.json  sync_luat_nha_o_2023.json
legal_chatbot/: __init__.py  __main__.py
legal_chatbot/api/: __init__.py  (+4 more)
scripts/: audit-cache.json  audit-quick.json  generate_test_cases.py  init-db.sql
shared/: package.json  tsconfig.json
tests/: conftest.py  test_slash_commands.py
(+87 files in other folders)
