[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal_chatbot"
version = "0.1.0"
description = "Vietnamese Legal Chatbot with RAG-based Q&A"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Legal Team"}
]
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
pipeline = [
    # Heavy deps — only needed for crawl/embed, NOT for chat/contract API
    "sentence-transformers>=2.2.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
legal-chatbot = "legal_chatbot.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
